--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,28 @@
             <li class="nav-item <%= "active" if current_page?("/") %>">
               <%= link_to "Home", root_path, class: "nav-link" %>
             </li>
-            <li class="nav-item <%= "active" if current_page?("/users/sign_up") %>">
-              <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
-            </li>
           </ul>
+
+          <% unless user_signed_in? %>
+            <ul class="navbar-nav ml-md-auto">
+              <li class="nav-item <%= "active" if current_page?("/users/sign_up") %>">
+                <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item <%= "active" if current_page?("/users/sign_in") %>">
+                <%= link_to "Sign in", new_user_session_path, class: "nav-link" %>
+              </li>
+            </ul>
+          <% end %>
+          <% if  user_signed_in? %>
+            <span class="navbar-text ml-md-auto">
+              Signed in as <%= current_user.email %>
+            </span>
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+              </li>
+            </ul>
+          <% end %>
         </div>
       </div>
     </nav>
