Admins can edit project roles of existing users

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -7,3 +7,17 @@
                     data: { confirm: "Are you sure you want to archive this user?"}, class: "delete" %></li>
   </ul>
 </header>
+
+<header>
+  <h2>Roles</h2>
+
+  <% if @user.roles.any? %>
+    <uL>
+      <% @user.roles.each do |role| %>
+        <li><%= role.project.name %>: <%= role.role.titleize %></li>
+      <% end %>
+    </uL>
+  <% else %>
+    <p>This user has no roles.</p>
+  <% end %>
+</header>
