--- a/app/assets/stylesheets/admin/users.scss
+++ b/app/assets/stylesheets/admin/users.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the admin/users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.roles {
+  @extend .table;
+
+  tr:first-child {
+    td,th {
+      border-top: 0;
+    }
+  }
+
+  select {
+    @extend .form-control;
+  }
+}
