--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,6 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
  */
 
@@ -20,6 +19,7 @@
 @import "projects";
 @import "tickets";
 @import "admin/application";
+@import "admin/users";
 @import "responsive";
 
 .page-header {
@@ -136,3 +136,4 @@ body {
     line-height: 24px !important;
   }
 }
+
